--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,30 @@
 body {
-    background-color: navy;
+    background-color: beige;
+}
+.content{
+    padding-left: 100px;
+    animation-name: animation;
+    animation-duration: 2s;
+}
+p {font-size: 16px;
+   font-family: Helvetica}
+
+img.home {
+    width: 90%;
+    height: 100%;
+    animation-name: tada;
+    animation-duration: 2s;
+}
+img.basic {
+    padding-left: 50px;
+    width: 100%;
 }
 
+@keyframes animation {
+    0% { transform: translateY(0px); }
+    100% { transform: translateY(50px); }
+}
 
-object {
-    height: 100vh;
-    width: 100vh;
+@keyframes tada {
+    100% { transform: scale(1.2); }
 }
